noinst_LTLIBRARIES = libbitstream.la
libbitstream_la_LDFLAGS = -static
libbitstream_la_SOURCES = \
	bitstream.cpp 

INCLUDES = -I../../include

AM_CFLAGS = -D_REENTRANT -Werror -Wall -Wpointer-arith -Wcast-align -Wstrict-prototypes -Wmissing-prototypes

AM_CXXFLAGS = -D_REENTRANT -DNOCONTROLS -fexceptions -Wall -Werror -Wpointer-arith -Wcast-align -Wstrict-prototypes -Wmissing-prototypes

