SUBDIRS=doc
lib_LTLIBRARIES = libmp4.la

INCLUDES = -I$(top_srcdir)/include

libmp4_la_SOURCES = \
	atom.c \
	ctab.c \
	ctts.c \
	dimm.c \
	dinf.c \
	dmax.c \
	dmed.c \
	dref.c \
	drep.c \
	edts.c \
	elst.c \
	esds.c \
	gmhd.c \
	gmin.c \
	hdlr.c \
	hinf.c \
	hint.c \
	hintudta.c \
	hmhd.c \
	hnti.c \
	hinthnti.c \
	iods.c \
	matrix.c \
	maxr.c \
	mdat.c \
	mdhd.c \
	mdia.c \
	minf.c \
	moov.c \
	mvhd.c \
	nump.c \
	payt.c \
	pmax.c \
	quicktime.c \
	rtp.c \
	rtphint.c \
	sdp.c \
	smhd.c \
	stbl.c \
	stco.c \
	stsc.c \
	stsd.c \
	stsdtable.c \
	stss.c \
	stsz.c \
	stts.c \
	tkhd.c \
	tmin.c \
	tmax.c \
	tpyl.c \
	trak.c \
	tref.c \
	trpy.c \
	udta.c \
	util.c \
	vmhd.c \
	funcprotos.h \
	private.h \
	quicktime.h \
	rtphint.h \
	sizes.h

EXTRA_DIST=libmp460.dsp README README_ORIGINAL libmp4.vcproj
